--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.19.1",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
