--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
