--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "lucide-react": "^0.441.0",
