--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,17 @@
     "dependencies": {
         "@headlessui/react": "^2.1.8",
         "@hookform/resolvers": "^3.9.0",
-        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.1.0",
         "@radix-ui/react-progress": "^1.1.0",
-        "class-variance-authority": "^0.7.0",
         "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-toast": "^1.2.1",
         "@tanstack/react-table": "^8.20.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
         "axios": "^1.7.7",
+        "class-variance-authority": "^0.7.0",
         "classnames": "^2.5.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.441.0",
@@ -31,7 +33,8 @@
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.26.2",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
